--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.18.1"
+        "bcrypt": "^5.0.1",
+        "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.3.4",
+        "mongoose-unique-validator": "^3.0.0",
+        "multer": "^1.4.4-lts.1"
     }
 }
